Nueva funcionalidad agregada: Notification